ajout de la section quality avec les class

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <header>
-        <a href="/" class="logo">La Maison du <span>Chocolat.</span></a>
+        <a href="#" class="logo">La Maison du <span>Chocolat.</span></a>
         <nav>
             <ul class="menu">
                 <li><a href="#">Accueil</a></li>
@@ -23,8 +23,16 @@
 
     <main>
         <section class="hero">
-            <h1>NOUVELLE SAISON <br>NOUVEAUX CHOCOLATS</h1>
+            <h1>NOUVELLE SAISON <span class="sub_hero">NOUVEAUX CHOCOLATS</span></h1>
             <button>Par ici</button>
+        </section>
+
+        <section class="quality">
+            <div class="quality_stuff">
+                <img class="quality_icon" src="image/steps_icon-1.jpg" alt="img_1">
+                <h2 class="quality_title">QUALITÉ</h2>
+                <P class="quality_description">Une charte en 36 points encadre la qualité de nos chocolats et l'activité de nos boutiques.</P>
+            </div>
         </section>
     </main>
 </body>
