fin de la section quality

--- a/index.html
+++ b/index.html
@@ -33,7 +33,58 @@
                 <h2 class="quality_title">QUALITÉ</h2>
                 <P class="quality_description">Une charte en 36 points encadre la qualité de nos chocolats et l'activité de nos boutiques.</P>
             </div>
+
+            <div class="quality_stuff">
+                <img class="quality_icon" src="image/steps_icon-2.jpg" alt="img_2">
+                <h2 class="quality_title">ECOLOGIE</h2>
+                <p class="quality_description">Nous privilégions et encourageons lrs modes de culture, de récolte et de perception 100% naturels.</p>
+            </div>
+
+            <div class="quality_stuff">
+                <img class="quality_icon" src="image/steps_icon-3.png" alt="img_3">
+                <h2 class="quality_title">EQUITABLE</h2>
+                <p class="quality_description">La prime du commerce équitable et le prix minimum garantissent au petits producteurs une juste rémunération.</p>
+            </div>
         </section>
+
+        <section class="promotion">
+            <div class="promotion_card">
+                <div class="promotion_content">
+                <h2 class="promotion_title">Le club</h2>
+                <p class="promotion_description">Inscrivez-vous dès maintenant et profitez de nos offres spéciales!</p>
+                <button class="promotion_button">Plus d'infos</button>
+                </div>
+            </div>
+
+            <div class="promotion_card">
+                <div class="promotion_content">
+                <h2 class="promotion_title">Nos actus</h2>
+                <p class="promotion_description"> Offres spéciales, nouvelles gammes de produits, évènements...</p>
+                <button class="promotion_button">Plus d'infos</button>
+                </div>
+            </div>
+        </section>
+
+        <section class="contact">
+                <h2 class="contact_title">CONTACTEZ-NOUS</h2>
+                <p class="contact_description">Nous sommes une entreprise de chocolaterie proposant toutes sortes de chocolats 
+                    mais aussi des cours pour vous permettre de préparer vous-même vos chocolats.</p>
+
+                <form action="Email" class="contact_form">
+                <div class="contact_form_stuff">
+                <label for="name">Nom</label>
+                <input type="name" id="name" name="name" placeholder="Votre nom">
+                <label for="Email">Email</label>
+                <input type="email" id="email" email="email" placeholder="Votre email">
+                <button class="contact_button">OK</button>
+                </div>
+                </form>
+        </section>
+
+        <footer>
+            <a class="footer_logo" href="#">La Maison du <span>Chocolat.</span></a>
+            <p>Copyright Tous droits réservés</p>
+        </footer>
     </main>
 </body>
 
